🐛🎨 ♻️  Fixes for class progression table and misc item/spell/stablock issues (#676)
* Fixes for class progression table, items of resistance, 2024 monster attack rolls, emanation spells, and general formatting of spell properties
* Fix bug that was overwriting text for more resistance-granting items than intended
* ♻️ Apply suggestions from code review
* ♻️ 🐛 Updated handling of joining Attack strings in statblocks; cleaner handling of Material components
* ♻️ 🐛 Cleaning up implementation of item resistance handling and spell properties
* 🐛 Restore missing call to replaceText for spell material components
* 🎨 ♻️ 🐛 Fix formatting test fail and revise implementation of material components based on suggestion

---------

Co-authored-by: Erin Schnabel <ebullientworks@gmail.com>